kubernetes/vpro-app/rmq-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq01
spec:
  selector:
    matchLabels:
      app: vpromq01
  replicas: 1
  template:
    metadata:
      labels:
        app: vpromq01
    spec:
      containers:
      - name: vpromq01
        image: rabbitmq:3-management  # مهم جداً: استخدم نسخة management لتفعيل الواجهة
        ports:
        - name: rmqp-port
          containerPort: 5672        # منفذ البيانات الأساسي
        - name: http-port
          containerPort: 15672       # منفذ واجهة الإدارة
