kubernetes/vpro-app/rmq-CIP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  ports:
  - name: rmqp
    port: 5672
    targetPort: rmqp-port    # توجيه صحيح لمنفذ البيانات
  - name: management
    port: 15672
    targetPort: http-port    # توجيه صحيح لمنفذ الإدارة
  selector:
    app: vpromq01
  type: ClusterIP
